# problemo

./: Cargo.toml  README.md
examples/: errors.rs  problemo.rs
scripts/: build-docs  examples
src/: as_error.rs  captured.rs  cause.rs  into.rs  lib.rs  problem.rs  problems.rs  result.rs
src/attachment/: attachment.rs  attachments.rs  captured.rs  mod.rs
src/cause/: cause.rs  chain.rs  iterator.rs  mod.rs  ref.rs
src/common/: common.rs  exit_code.rs  mod.rs  problem.rs  result.rs
src/compatibility/: anyhow.rs  mod.rs
src/compatibility/serde/: mod.rs  problem.rs  result.rs
src/error/: captured.rs  message.rs  mod.rs  problem.rs  tag.rs
src/errors/: message.rs  mod.rs  tag.rs
src/receiver/: fail_fast.rs  mod.rs  receiver.rs  ref.rs  result.rs  unwrap.rs
